[INFER] Fix bogus assert, bug 686179.